2004-09-01  Sebastien Pouliot  <sebastien@ximian.com>

	* HashTest.cs: Fixed tests so they execute without errors on both
	Fx 1.1 and Fx 2.0 (beta 1).
	* PublisherTest.cs: Fixed tests so they execute without errors on both
	Fx 1.1 and Fx 2.0 (beta 1). Converted tests to NUnit 2.2 format.
	* SiteTest.cs: Fixed tests so they execute without errors on both Fx 
	1.1 and Fx 2.0 (beta 1).
	* StrongNameTest.cs: Fixed tests so they execute without errors on 
	both Fx 1.1 and Fx 2.0 (beta 1). Converted tests to NUnit 2.2 format.
	* UrlTest.cs: Fixed tests so they execute without errors on both Fx 
	1.1 and Fx 2.0 (beta 1). Converted tests to NUnit 2.2 format.

2004-09-01  Sebastien Pouliot  <sebastien@ximian.com>

	* ZoneTest.cs: Added test to check that NoZone isn't included in the 
	permission XML (returned by CreateIdentityPermission).

2004-08-30  Sebastien Pouliot  <sebastien@ximian.com>

	* SiteTest.cs: Added tests for CreateFromUrl. Updated AllChars for the
	differences in Fx 2.0.
	* UrlTest.cs: Unignore Url_InvalidSite and started changes to be
	compatible with NET_2_0.
	* ZoneTest.cs: Added tests for CreateFromUrl and ToString.

2004-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicationDirectoryTest.cs: New. For NET_2_0 profile.
	* EvidenceTest.cs: Added more tests for 1.1 and new tests for 2.0.
	* FileCodeGroupTest.cs: Added more tests for Resolve,
	ResolveMatchingCodeGroups and new Fx 2.0 Scope property.
	* HashMembershipConditionTest.cs: New. Unit tests for hash membership.
	* HashTest.cs: New. Unit tests for hash.
	* IBuiltInEvidenceTest.cs: New. Unit tests for the internal 
	IBuiltInEvidence interface. All tests are [Ignore]d for the 
	* NetCodeGroupTest.cs: Ajusted PermissionSetName for Fx 2.0.
	* PermissionRequestEvidenceTest.cs: Ajusted existing tests for 2.0. 
	Converted tests to NUnit 2.2 format. Converted to UNIX line endings.
	Added test to see that the original permission sets are copied but